<resources>
    <string name="app_name">Quickorder</string>
    <string name="app_name_label">Quickorder app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="welcome">"Welcome !"</string>
    <string name="welcome_text">Welcome to the</string>
    <string name="action_cart">Cart</string>
    <string name="action_settings">Settings</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="biz_logo">Logo</string>
    <string name="title_activity_available_orders">Available Orders</string>
    <string name="title_activity_record_order">Add Order</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_neworder">New Order</string>

    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>


    <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="primary">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="expanded_supporting">I\'m a thing. But, like most politicians,</string>
    <string name="order_details">Order Details</string>
    <string name="select_table">Select Table</string>
    <string name="no_data_available">No data available</string>
    <string name="select_menu">Select Menu Item</string>
    <string name="select_condiment">Select Condiment</string>
    <string name="reset_btn">Reset</string>
    <string name="add_condiment">Add to Meal</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="add_more">Add More</string>
</resources>
