<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/ordersScreen">

    <fragment
        android:id="@+id/profileScreen"
        android:name="mubstimor.android.quickorder.ui.main.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/ordersScreen"
        android:name="mubstimor.android.quickorder.ui.main.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_recycler">
        <action
            android:id="@+id/action_ordersScreen_to_orderDetailsScreen"
            app:destination="@id/orderDetailsScreen" />
        <action
            android:id="@+id/action_ordersScreen_to_selectTableScreen"
            app:destination="@id/selectTableScreen" />
    </fragment>

    <fragment
        android:id="@+id/orderDetailsScreen"
        android:name="mubstimor.android.quickorder.ui.main.orders.details.DetailsFragment"
        android:label="@string/order_details"
        tools:layout="@layout/fragment_recycler"/>

    <fragment
        android:id="@+id/selectTableScreen"
        android:name="mubstimor.android.quickorder.ui.main.orders.neworder.SelectTableFragment"
        android:label="@string/select_table"
        tools:layout="@layout/fragment_recycler">
        <action
            android:id="@+id/action_selectTableScreen_to_selectMenuScreen"
            app:destination="@id/selectMenuScreen" />
    </fragment>

    <fragment
        android:id="@+id/selectMenuScreen"
        android:name="mubstimor.android.quickorder.ui.main.orders.menu.SelectMenuFragment"
        android:label="@string/select_menu"
        tools:layout="@layout/fragment_recycler">
        <action
            android:id="@+id/action_selectMenuScreen_to_selectCondimentScreen"
            app:destination="@id/selectCondimentScreen" />
    </fragment>

    <fragment
        android:id="@+id/selectCondimentScreen"
        android:name="mubstimor.android.quickorder.ui.main.orders.condiments.CondimentFragment"
        android:label="@string/select_condiment"
        tools:layout="@layout/fragment_recycler">
        <action
            android:id="@+id/action_selectCondimentScreen_to_confirmOrderScreen"
            app:destination="@id/confirmOrderScreen" />
    </fragment>

    <fragment
        android:id="@+id/confirmOrderScreen"
        android:name="mubstimor.android.quickorder.ui.main.orders.confirm.ConfirmFragment"
        android:label="@string/confirm_order"
        tools:layout="@layout/fragment_confirm_order"/>

</navigation>